test/corpus/tpl_sections.txt
==================
an empty slot
==================

{% slot name %}
{% endslot %}

---

(document
  (tpl_slot
    (tpl_start_tag
      (tpl_tag_name)
      (tpl_tag_attributes))
    (tpl_end_tag
      (tpl_tag_name))))


==================
a slot with nested text
==================

{% slot name %}
  Hello
{% endslot %}

---

(document
  (tpl_slot
    (tpl_start_tag
      (tpl_tag_name)
      (tpl_tag_attributes))
    (text)
    (tpl_end_tag
      (tpl_tag_name))))


==================
a slot with nested elements
==================

{% slot name %}
  <div>Hello</div>
{% endslot %}

---

(document
  (tpl_slot
    (tpl_start_tag
      (tpl_tag_name)
      (tpl_tag_attributes))
    (element
      (start_tag
        (tag_name))
      (text)
      (end_tag
        (tag_name)))
    (tpl_end_tag
      (tpl_tag_name))))


==================
a slot inside the element's attribute aria
==================

<html {% slot html_attrs %}lang="en"{% endslot %}></html>

---

(document
  (element
    (start_tag
      (tag_name)
      (tpl_slot
        (tpl_start_tag
          (tpl_tag_name)
          (tpl_tag_attributes))
        (attribute
          (attribute_name)
          (quoted_attribute_value
            (attribute_value
              (value_fragment))))
        (tpl_end_tag
          (tpl_tag_name))))
    (end_tag
      (tag_name))))

==================
a slot inside an attribute value wrapped in double quotes
==================

<html class="{% slot body_class %}foo'{% endslot %}"></html>

---

(document
  (element
    (start_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (attribute_value
            (tpl_slot
              (tpl_start_tag
                (tpl_tag_name)
                (tpl_tag_attributes))
              (value_fragment)
              (tpl_end_tag
                (tpl_tag_name)))))))
    (end_tag
      (tag_name))))

==================
a slot inside an attribute value wrapped in single quotes
==================

<html class='{% slot body_class %}foo"{% endslot %}'></html>

---

(document
  (element
    (start_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (attribute_value
            (tpl_slot
              (tpl_start_tag
                (tpl_tag_name)
                (tpl_tag_attributes))
              (value_fragment)
              (tpl_end_tag
                (tpl_tag_name)))))))
    (end_tag
      (tag_name))))
