test/corpus/tpl_use.txt
==================
an empty use statement
==================

{% use "file.html" %}
{% enduse %}

---

(fragment
  (tpl_use
    (tpl_start_tag
      (tpl_tag_name)
      (tpl_tag_attributes))
    (tpl_end_tag
      (tpl_tag_name))))


==================
a use statement with nested text
==================

{% use "file.html" %}
  Hello
{% enduse %}

---

(fragment
  (tpl_use
    (tpl_start_tag
      (tpl_tag_name)
      (tpl_tag_attributes))
    (text)
    (tpl_end_tag
      (tpl_tag_name))))


==================
a use statement with a slot inside
==================

{% use "button.html" %}
  {% slot caption %}
    Save
  {% endslot %}
{% enduse %}

---

(fragment
  (tpl_use
    (tpl_start_tag
      (tpl_tag_name)
      (tpl_tag_attributes))
    (tpl_slot
      (tpl_start_tag
        (tpl_tag_name)
        (tpl_tag_attributes))
      (text)
      (tpl_end_tag
        (tpl_tag_name)))
    (tpl_end_tag
      (tpl_tag_name))))


==================
a use statement with nested elements
==================

{% use "file.html" %}
  <div>Hello</div>
{% enduse %}

---

(fragment
  (tpl_use
    (tpl_start_tag
      (tpl_tag_name)
      (tpl_tag_attributes))
    (element
      (start_tag
        (tag_name))
      (text)
      (end_tag
        (tag_name)))
    (tpl_end_tag
      (tpl_tag_name))))


==================
a use statement inside the element's attribute aria
==================

<html {% use "file.html" %}lang="en"{% enduse %}></html>

---

(fragment
  (element
    (start_tag
      (tag_name)
      (tpl_use
        (tpl_start_tag
          (tpl_tag_name)
          (tpl_tag_attributes))
        (attribute
          (attribute_name)
          (quoted_attribute_value
            (attribute_value
              (value_fragment))))
        (tpl_end_tag
          (tpl_tag_name))))
    (end_tag
      (tag_name))))

==================
a use statement inside an attribute value wrapped in double quotes
==================

<button class="{% use "style.html" %}button{% enduse %}"></button>

---

(fragment
  (element
    (start_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (attribute_value
            (tpl_use
              (tpl_start_tag
                (tpl_tag_name)
                (tpl_tag_attributes))
              (value_fragment)
              (tpl_end_tag
                (tpl_tag_name)))))))
    (end_tag
      (tag_name))))

==================
a use statement inside an attribute value wrapped in single quotes
==================

<button class='{% use "style.html" %}button{% enduse %}'></button>

---

(fragment
  (element
    (start_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (attribute_value
            (tpl_use
              (tpl_start_tag
                (tpl_tag_name)
                (tpl_tag_attributes))
              (value_fragment)
              (tpl_end_tag
                (tpl_tag_name)))))))
    (end_tag
      (tag_name))))
